package org.anubis.lectures.studentmngmtsys.controller;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.*;
import javafx.util.StringConverter;
import org.anubis.lectures.studentmngmtsys.model.*;

public class EnrollByCourseController {
    @FXML private ChoiceBox<Course> courseChoice;
    @FXML private TableView<Enrollment> table;

    private StudentStorage studentStorage;
    private CourseStorage  courseStorage;
    @FXML private TableColumn<Enrollment, Student> studentColumn;
    @FXML private TableColumn<Enrollment, Double>  gradeColumn;

    @FXML
    public void initialize() {
        studentColumn.setCellValueFactory(
                cellData -> cellData.getValue().studentProperty()
        );
        gradeColumn.setCellValueFactory(
                cellData -> cellData.getValue().gradeProperty().asObject()
        );
    }

    /** Inject both storages */
    public void setStorage(StudentStorage ss, CourseStorage cs) {
        this.studentStorage = ss;
        this.courseStorage  = cs;

        // 1) converter so Course → title
        courseChoice.setConverter(new StringConverter<Course>() {
            @Override
            public String toString(Course c) {
                return c == null ? "" : c.getCourseTitle();
            }
            @Override
            public Course fromString(String string) {
                return null;
            }
        });

        // 2) *now* populate the choice box
        courseChoice.setItems(cs.getCourseData());

        // 3) listener to update table when selection changes
        courseChoice.getSelectionModel().selectedItemProperty().addListener(
                (obs, oldC, newC) -> {
                    if (newC != null) {
                        table.setItems(
                                ss.getEnrollments().filtered(e -> e.getCourse() == newC)
                        );
                    }
                }
        );
    }

    @FXML
    private void handleEnrollStudent() {
        Course course = courseChoice.getValue();
        if (course == null) {
            // show warning if you like
            return;
        }

        ChoiceDialog<Student> dialog = new ChoiceDialog<>(
                null,
                studentStorage.getStudentData()
        );
        dialog.setTitle("Enroll Student");
        dialog.setHeaderText("Enroll in “" + course.getCourseTitle() + "”");
        dialog.setContentText("Select student:");

        dialog.showAndWait()
                .ifPresent(s -> studentStorage.enroll(s, course));
    }

    @FXML private void handleSetGrade() {
        Enrollment selected = table.getSelectionModel().getSelectedItem();
        if (selected == null) {
            // show warning: “Select a student first”
            return;
        }
        // reuse a simple TextInputDialog to grab the new grade
        TextInputDialog dlg = new TextInputDialog(
                Double.toString(selected.getGrade())
        );
        dlg.setTitle("Set Grade");
        dlg.setHeaderText("Set grade for " + selected.getStudent().getFirstName());
        dlg.setContentText("Grade:");

        dlg.showAndWait().ifPresent(str -> {
            try {
                double g = Double.parseDouble(str);
                selected.setGrade(g);
                // optionally update storage/persistence
                table.refresh();
            } catch (NumberFormatException ex) {
                // show error “Invalid number”
            }
        });
    }
}
